--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -5,8 +5,10 @@
         <ResourceDictionary Source="pack://application:,,,/Styles/CountdownControl.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Styles/CountdownElement.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Styles/HighlightableTextBlock.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Styles/WindowIconToggleButton.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     <Style BasedOn="{StaticResource Styles.CountdownElement}" TargetType="{x:Type controls:CountdownElement}"/>
     <Style BasedOn="{StaticResource Styles.CountdownControl}" TargetType="{x:Type controls:CountdownControl}"/>
     <Style BasedOn="{StaticResource Styles.HighlightableTextBlock}" TargetType="{x:Type controls:HighlightableTextBlock}"/>
+    <Style BasedOn="{StaticResource Styles.WindowIconToggleButton}" TargetType="{x:Type controls:WindowIconToggleButton}"/>
 </ResourceDictionary>
