--- a/Styles/WindowIconToggleButton.xaml
+++ b/Styles/WindowIconToggleButton.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:F1Desktop.Controls"
                     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
-                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
+                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                    xmlns:converters="clr-namespace:F1Desktop.Converters">
     <Style x:Key="Styles.WindowIconToggleButton"
            TargetType="controls:WindowIconToggleButton">
         <Setter Property="Template">
@@ -15,24 +16,17 @@
                     </ToggleButton>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="True">
-                            <Setter TargetName="PART_ToggleButton" Property="Content">
-                                <Setter.Value>
-                                    <!-- TODO: No idea why the binding isn't working. -->
-                                    <iconPacks:PackIconMaterial
-                                        Kind="{Binding OnIconKind, RelativeSource={RelativeSource TemplatedParent}}" />
-                                </Setter.Value>
-                            </Setter>
+                            <Setter TargetName="PART_ToggleButton" 
+                                    Property="Content"
+                                    Value="{Binding OnContent, RelativeSource={RelativeSource TemplatedParent}}"/>
                             <Setter TargetName="PART_ToggleButton"
                                     Property="ToolTip"
                                     Value="{Binding OnTooltip, RelativeSource={RelativeSource TemplatedParent}}" />
                         </Trigger>
                         <Trigger Property="IsChecked" Value="False">
-                            <Setter TargetName="PART_ToggleButton" Property="Content">
-                                <Setter.Value>
-                                    <iconPacks:PackIconMaterial
-                                        Kind="{Binding OffIconKind, RelativeSource={RelativeSource TemplatedParent}}" />
-                                </Setter.Value>
-                            </Setter>
+                            <Setter TargetName="PART_ToggleButton" 
+                                    Property="Content"
+                                    Value="{Binding OffContent, RelativeSource={RelativeSource TemplatedParent}}"/>
                             <Setter TargetName="PART_ToggleButton"
                                     Property="ToolTip"
                                     Value="{Binding OffTooltip, RelativeSource={RelativeSource TemplatedParent}}" />
