Rss feeder basics working, just need to get the icons loading and caching properly...

--- a/Features/Root/RootView.xaml
+++ b/Features/Root/RootView.xaml
@@ -29,6 +29,13 @@
                         <iconPacks:PackIconMaterial Kind="Calendar" />
                     </MenuItem.Icon>
                 </MenuItem>
+                <MenuItem Header="News"
+                          Command="{s:Action OpenWindow}"
+                          CommandParameter="{Binding News}">
+                    <MenuItem.Icon>
+                        <iconPacks:PackIconMaterial Kind="Newspaper"/>
+                    </MenuItem.Icon>
+                </MenuItem>
                 <Separator />
                 <MenuItem Header="Exit"
                           Command="{s:Action Exit}">
