--- a/Features/Root/RootView.xaml
+++ b/Features/Root/RootView.xaml
@@ -1,73 +1,52 @@
-﻿<controls:AdonisWindow x:Class="F1Desktop.Features.Root.RootView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:F1Desktop.Features.Root"
-        xmlns:tb="http://www.hardcodet.net/taskbar"
-        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        xmlns:s="https://github.com/canton7/Stylet"
-        xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
-        xmlns:calendar="clr-namespace:F1Desktop.Features.Calendar"
-        xmlns:news="clr-namespace:F1Desktop.Features.News"
-        x:Name="Root"
-        mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:RootViewModel}"
-        FontFamily="{StaticResource F1Font}"
-        Title="F1 Desktop"
-        Height="800"
-        Width="1100"
-        MinWidth="900"
-        Visibility="Hidden">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <tb:TaskbarIcon IconSource="pack://application:,,,/Resources/f1.ico"
-                        ToolTip="F1 Desktop"
-                        MenuActivation="LeftOrRightClick"
-                        NoLeftClickDelay="True">
-            <tb:TaskbarIcon.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="Calendar"
-                              Command="{s:Action OpenWindow}"
-                              CommandParameter="{x:Type calendar:CalendarRootViewModel}">
-                        <MenuItem.Icon>
-                            <iconPacks:PackIconMaterial Kind="Calendar" />
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    <MenuItem Header="News"
-                              Command="{s:Action OpenWindow}"
-                              CommandParameter="{x:Type news:NewsRootViewModel}">
-                        <MenuItem.Icon>
-                            <iconPacks:PackIconMaterial Kind="Newspaper"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    <Separator />
-                    <MenuItem Header="Exit"
-                              Command="{s:Action Exit}">
-                        <MenuItem.Icon>
-                            <iconPacks:PackIconMaterial Kind="Close" />
-                        </MenuItem.Icon>
-                    </MenuItem>
-                </ContextMenu>
-            </tb:TaskbarIcon.ContextMenu>
-        </tb:TaskbarIcon>
-        <ListBox Grid.Column="0"
-                 ItemsSource="{Binding Items}"
-                 SelectedItem="{Binding ActiveItem}"
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                 ScrollViewer.VerticalScrollBarVisibility="Disabled">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding DisplayName}" 
-                               FontSize="16" 
-                               HorizontalAlignment="Center"/>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <ContentControl Grid.Column="1" 
-                        s:View.Model="{Binding ActiveItem}"/>
-    </Grid>
-</controls:AdonisWindow>
+﻿<Window x:Class="F1Desktop.Features.Root.RootView"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                       xmlns:local="clr-namespace:F1Desktop.Features.Root"
+                       xmlns:tb="http://www.hardcodet.net/taskbar"
+                       xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                       xmlns:s="https://github.com/canton7/Stylet"
+                       xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
+                       xmlns:calendar="clr-namespace:F1Desktop.Features.Calendar"
+                       xmlns:news="clr-namespace:F1Desktop.Features.News"
+                       x:Name="Root"
+                       mc:Ignorable="d"
+                       d:DataContext="{d:DesignInstance local:RootViewModel}"
+                       Height="0"
+                       Width="0"
+                       Visibility="Hidden"
+                       ShowActivated="False"
+                       ShowInTaskbar="False"
+                       WindowStyle="None">
+    <tb:TaskbarIcon IconSource="pack://application:,,,/Resources/f1.ico"
+                    ToolTip="F1 Desktop"
+                    MenuActivation="LeftOrRightClick"
+                    NoLeftClickDelay="True">
+        <tb:TaskbarIcon.ContextMenu>
+            <ContextMenu>
+                <MenuItem Header="Calendar"
+                          Command="{s:Action OpenWindow}"
+                          CommandParameter="{x:Type calendar:CalendarRootViewModel}">
+                    <MenuItem.Icon>
+                        <iconPacks:PackIconMaterial Kind="Calendar" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="News"
+                          Command="{s:Action OpenWindow}"
+                          CommandParameter="{x:Type news:NewsRootViewModel}">
+                    <MenuItem.Icon>
+                        <iconPacks:PackIconMaterial Kind="Newspaper" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <Separator />
+                <MenuItem Header="Exit"
+                          Command="{s:Action Exit}">
+                    <MenuItem.Icon>
+                        <iconPacks:PackIconMaterial Kind="Close" />
+                    </MenuItem.Icon>
+                </MenuItem>
+            </ContextMenu>
+        </tb:TaskbarIcon.ContextMenu>
+    </tb:TaskbarIcon>
+</Window>
